--- a/Website/main.html
+++ b/Website/main.html
@@ -21,10 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Início</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Conteúdo</a>
+                <a class="nav-link" href="#">Conted</a>
               </li>
             </ul>
             <span class="navbar-text">
@@ -88,7 +88,7 @@
           <div class="col-md-4">
             <div class="position-sticky" style="top: 2rem;">
               <div class="p-4 mb-3 bg-light rounded">
-                <h4 class="fst-italic">Sobre</h4>
+                <h4 class="fst-italic">About</h4>
                 <p class="mb-0">Esta página é destinada a Git e todos os assuntos relacionados.</p>
               </div>
             </div>
