--- a/Website/main.html
+++ b/Website/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,11 +24,11 @@
                 <a class="nav-link active" aria-current="page" href="#">Início</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Conted</a>
+                <a class="nav-link" href="#">Contet 123</a>
               </li>
             </ul>
             <span class="navbar-text">
-              Sobre
+              ABC 123
             </span>
           </div>
         </div>
